--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "pc": "quasar dev",
     "dev": "quasar dev -m cordova -T android",
+    "buildWeb": "quasar build",
     "build": "quasar build -m cordova -T android",
     "lint": "eslint --ext .js,.ts,.vue ./",
     "test": "echo \"No test specified\" && exit 0"
@@ -35,7 +36,8 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.1.2"
+    "eslint-plugin-vue": "^6.1.2",
+    "strip-ansi": "=3.0.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
